--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         </div>
                         <div class="col-auto pl-0 pr-2 reset-button">
                             <div class="pointer-svg" onclick="ResetAll()">
-                                <svg class="bi bi-arrow-repeat" width="100%" height="100%" viewBox="0 0 16 16" fill="#b9babe" xmlns="http://www.w3.org/2000/svg">
+                                <svg class="bi bi-arrow-repeat" width="3vh" height="3vh" viewBox="0 0 16 16" fill="#b9babe" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M2.854 7.146a.5.5 0 00-.708 0l-2 2a.5.5 0 10.708.708L2.5 8.207l1.646 1.647a.5.5 0 00.708-.708l-2-2zm13-1a.5.5 0 00-.708 0L13.5 7.793l-1.646-1.647a.5.5 0 00-.708.708l2 2a.5.5 0 00.708 0l2-2a.5.5 0 000-.708z" clip-rule="evenodd"/>
                                     <path fill-rule="evenodd" d="M8 3a4.995 4.995 0 00-4.192 2.273.5.5 0 01-.837-.546A6 6 0 0114 8a.5.5 0 01-1.001 0 5 5 0 00-5-5zM2.5 7.5A.5.5 0 013 8a5 5 0 009.192 2.727.5.5 0 11.837.546A6 6 0 012 8a.5.5 0 01.501-.5z" clip-rule="evenodd"/>
                                 </svg>
@@ -42,7 +42,7 @@
                         </div>
                         <div class="col-auto pl-0 pr-2 reset-button">
                             <div class="pointer-svg" onclick="CopyInfo()">
-                                <svg class="bi bi-files" width="100%" height="100%" viewBox="0 0 16 16" fill="#b9babe" xmlns="http://www.w3.org/2000/svg">
+                                <svg class="bi bi-files" width="3vh" height="3vh" viewBox="0 0 16 16" fill="#b9babe" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M3 2h8a2 2 0 012 2v10a2 2 0 01-2 2H3a2 2 0 01-2-2V4a2 2 0 012-2zm0 1a1 1 0 00-1 1v10a1 1 0 001 1h8a1 1 0 001-1V4a1 1 0 00-1-1H3z" clip-rule="evenodd"/>
                                     <path d="M5 0h8a2 2 0 012 2v10a2 2 0 01-2 2v-1a1 1 0 001-1V2a1 1 0 00-1-1H5a1 1 0 00-1 1H3a2 2 0 012-2z"/>
                                 </svg>
