--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
     </head>
     <body>
         <div class="main-box">
-            <h1 class="title-text">BINARY TO DECIMAL</h1>
+            <h1 class="title-text">
+                <span class="rwd-line">BINARY</span>
+                <span class="rwd-line">TO</span>
+                <span class="rwd-line">DECIMAL</span>
+            </h1>
             <h6 class="subtitle-text">SIMPLE AND EASY</h6>
-            <form>
+            <form class="pl-3 pr-3">
                 <div class="form-margin">
                     <div class="d-flex flex-nowrap transparent-input-cover">
                         <div class="col p-0">
