--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
                 <div class="form-margin">
                     <div class="d-flex flex-nowrap transparent-input-cover">
                         <div class="col p-0">
-                            <input type="text" id="BinaryInput" autocomplete="off" class="transparent-input" onkeypress="return IsNumber(event)" placeholder="Binary"/>
+                            <input type="text" id="BinaryInput" autocomplete="off" class="transparent-input" onkeydown="return IsNumber(event)" placeholder="Binary"/>
                         </div>
                         <div class="col-auto pl-0 pr-2 reset-button">
                             <div class="pointer-svg" onclick="ResetAll()">
-                                <svg class="bi bi-arrow-repeat" width="3vh" height="3vh" viewBox="0 0 16 16" fill="#b9babe" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M2.854 7.146a.5.5 0 00-.708 0l-2 2a.5.5 0 10.708.708L2.5 8.207l1.646 1.647a.5.5 0 00.708-.708l-2-2zm13-1a.5.5 0 00-.708 0L13.5 7.793l-1.646-1.647a.5.5 0 00-.708.708l2 2a.5.5 0 00.708 0l2-2a.5.5 0 000-.708z" clip-rule="evenodd"/>
-                                    <path fill-rule="evenodd" d="M8 3a4.995 4.995 0 00-4.192 2.273.5.5 0 01-.837-.546A6 6 0 0114 8a.5.5 0 01-1.001 0 5 5 0 00-5-5zM2.5 7.5A.5.5 0 013 8a5 5 0 009.192 2.727.5.5 0 11.837.546A6 6 0 012 8a.5.5 0 01.501-.5z" clip-rule="evenodd"/>
+                                <svg class="bi bi-backspace" width="3vh" height="3vh" viewBox="0 0 16 16" fill="#b9babe" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M6.603 2h7.08a1 1 0 011 1v10a1 1 0 01-1 1h-7.08a1 1 0 01-.76-.35L1 8l4.844-5.65A1 1 0 016.603 2zm7.08-1a2 2 0 012 2v10a2 2 0 01-2 2h-7.08a2 2 0 01-1.519-.698L.241 8.65a1 1 0 010-1.302L5.084 1.7A2 2 0 016.603 1h7.08z" clip-rule="evenodd"/>
+                                    <path fill-rule="evenodd" d="M5.83 5.146a.5.5 0 000 .708l5 5a.5.5 0 00.707-.708l-5-5a.5.5 0 00-.708 0z" clip-rule="evenodd"/>
+                                    <path fill-rule="evenodd" d="M11.537 5.146a.5.5 0 010 .708l-5 5a.5.5 0 01-.708-.708l5-5a.5.5 0 01.707 0z" clip-rule="evenodd"/>
                                 </svg>
                             </div>
                         </div>
