--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="form-margin">
                     <div class="d-flex flex-nowrap transparent-input-cover">
                         <div class="col p-0">
-                            <input type="text" id="BinaryInput" autocomplete="off" class="transparent-input" onkeydown="return IsNumber(event)" placeholder="Binary"/>
+                            <input type="tel" pattern="\d*" id="BinaryInput" class="transparent-input" onkeypress="return IsNumber(event)" placeholder="Binary"/>
                         </div>
                         <div class="col-auto pl-0 pr-2 reset-button">
                             <div class="pointer-svg" onclick="ResetAll()">
