--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
     </head>
     <body>
         <div class="main-box">
-            <h1 class="title-text">
-                <span class="rwd-line">BINARY</span>
-                <span class="rwd-line">TO</span>
-                <span class="rwd-line">DECIMAL</span>
-            </h1>
+            <h1 class="title-text">BINARY TO DECIMAL</h1>
             <h6 class="subtitle-text">SIMPLE AND EASY</h6>
             <form class="pl-3 pr-3" onsubmit="Convert(event)">
                 <div class="form-margin">
