--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p id="validation" class="validation"></p>
                     <div class="d-flex flex-nowrap transparent-input-cover">
                         <div class="col p-0">
-                            <input id="BinaryInput" type="numeric" pattern="[0-1]*" class="transparent-input" placeholder="Binary"/>
+                            <input id="BinaryInput" type="tel" pattern="[0-1]*" class="transparent-input" placeholder="Binary"/>
                         </div>
                         <div class="col-auto pl-0 pr-2 reset-button">
                             <div class="pointer-svg" onclick="ResetAll()">
