--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="col-auto pl-0 pr-2 reset-button">
                             <div class="pointer-svg" onclick="ResetAll()">
-                                <svg class="bi bi-backspace" width="25px" height="25px" viewBox="0 0 16 16" fill="#b9babe" xmlns="http://www.w3.org/2000/svg">
+                                <svg class="bi bi-backspace" width="25px" height="25px" viewBox="0 0 16 16" fill="#808080" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M6.603 2h7.08a1 1 0 011 1v10a1 1 0 01-1 1h-7.08a1 1 0 01-.76-.35L1 8l4.844-5.65A1 1 0 016.603 2zm7.08-1a2 2 0 012 2v10a2 2 0 01-2 2h-7.08a2 2 0 01-1.519-.698L.241 8.65a1 1 0 010-1.302L5.084 1.7A2 2 0 016.603 1h7.08z" clip-rule="evenodd"/>
                                     <path fill-rule="evenodd" d="M5.83 5.146a.5.5 0 000 .708l5 5a.5.5 0 00.707-.708l-5-5a.5.5 0 00-.708 0z" clip-rule="evenodd"/>
                                     <path fill-rule="evenodd" d="M11.537 5.146a.5.5 0 010 .708l-5 5a.5.5 0 01-.708-.708l5-5a.5.5 0 01.707 0z" clip-rule="evenodd"/>
@@ -44,7 +44,7 @@
                         </div>
                         <div class="col-auto pl-0 pr-2 reset-button">
                             <div class="pointer-svg" onclick="CopyInfo()">
-                                <svg class="bi bi-files" width="25px" height="25px" viewBox="0 0 16 16" fill="#b9babe" xmlns="http://www.w3.org/2000/svg">
+                                <svg class="bi bi-files" width="25px" height="25px" viewBox="0 0 16 16" fill="#808080" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M3 2h8a2 2 0 012 2v10a2 2 0 01-2 2H3a2 2 0 01-2-2V4a2 2 0 012-2zm0 1a1 1 0 00-1 1v10a1 1 0 001 1h8a1 1 0 001-1V4a1 1 0 00-1-1H3z" clip-rule="evenodd"/>
                                     <path d="M5 0h8a2 2 0 012 2v10a2 2 0 01-2 2v-1a1 1 0 001-1V2a1 1 0 00-1-1H5a1 1 0 00-1 1H3a2 2 0 012-2z"/>
                                 </svg>
